fix: improve URL handling and job cleaning management
- Updated `CustomResourceUrlResolver` to use `URI` for URL creation, ensuring better URL validation and handling.
- Replaced manual clamping with `Math.clamp` for heading level adjustment in `HtmlProcessor`.
- Enhanced `DocxConverterJobsCleaner` with proper executor management, allowing clean start/stop behavior.
- Added unit tests for `DocxConverterJobsCleaner` to validate job lifecycle operations.